<resources>
    <string name="app_name">Цифровой паспорт кабинета</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Войти</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="birthday_date">Дата рождения</string>
    <string name="year">Год</string>
    <string name="month">Месяц</string>
    <string name="day">День</string>
    <string name="arrow">Стрелка</string>
    <string name="register">Зарегистрировать</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_email">Введите почту</string>
    <string name="enter_password">Введите пароль</string>
    <string name="list_coworkers">Спиcок сотрудников</string>
    <string name="enter_nameOrLastName">Введите имя или фамилию</string>
    <string name="enter_nameCabinet">Введите название кабинета</string>
    <string name="search_icon">Поиск</string>
    <string name="add_icon">Добавление персонала</string>
    <string name="document_icon">Документы</string>
    <string name="scan_icon">Сканер QR</string>
    <string name="list_cabinet">Список кабинетов</string>
    <string name="user_not_found">Пользователь не найден. Проверьте почту или пароль!</string>
    <string name="name_lastName_card">%1$s %2$s</string>
    <string name="registration_user">Регистрация нового пользователя</string>
    <string name="close_activity">кнопка выхода</string>
    <string name="alert">иконка предупреждения</string>
    <string name="dialog_message_close">Вы уверены, что хотите выйти? Изменения сохранены не будут</string>
    <string name="close">Выйти</string>
    <string name="alert_message_register">В целях конфиденциальности пароль будет сгенерирован системой и отправлен на почтовый адрес пользователя. В случае смены адреса пароль будет изменен и отправлен на новый адрес изменить пароль не получится. Данный пароль будут знать только система и пользователь.</string>
    <string name="icon_edit">Иконка редактирования</string>
    <string name="icon_delete">Иконка удаления</string>
    <string name="edit_user_data">Изменение данных пользователя</string>
    <string name="saved_changes">Сохранить изменения</string>
    <string name="delete_user">Удалить Пользователя</string>
    <string name="delete">Удалить</string>
    <string name="alert_delete_user">Вы уверены, что хотите удалить пользователя?</string>
    <string name="return_btn">кнопка возврата</string>
    <string name="name_documentations">Отчетная документация</string>
    <string name="enter_date_documents">Введите название документа</string>
    <string name="add_documentation">Добавление документации</string>
    <string name="icn_download">Иконка скачивания</string>
    <string name="enter_on_download_document">нажмите чтобы скачать документ</string>
    <string name="date_created">Дата создания: %1$s</string>
    <string name="name_create_documents">Создание нового документа</string>
    <string name="document_type">Тип документа</string>
    <string name="name_equipment">Название оборудования</string>
    <string name="alert_document">Внимание! Данная панель доступна только при планах закупок</string>
    <string name="name_price">Цена</string>
    <string name="enter_price">Введите цену</string>
    <string name="name_count">Количество</string>
    <string name="enter_count">Введите кол-во</string>
    <string name="enter_equipment">Добавить оборудование</string>
    <string name="required_buy">Требуется закупить</string>
    <string name="btn_create_document">Создать документ</string>
    <string name="plan_price">Ведите планируемые затраты</string>
    <string name="name_plan_price">Планируемы затраты</string>
    <string name="name_total_price">Итого потрачено</string>
    <string name="enter_total_price">Введите сколько потрачено</string>
    <string name="enter_date">Выберете дату рождения</string>
    <string name="enter_period">Выберете период</string>
    <string name="name_period">Период</string>
    <string name="delete_item_from_card">Кнопка удаления карточки</string>
    <string name="price_text">Цена за штуку (руб.): %1$d</string>
    <string name="count_text">Количество: %1$d</string>
    <string name="add_cabinet">Добавление кабинетов</string>
    <string name="add_cabinet_name">Добавление нового кабинета</string>
    <string name="add_cabinet_btn">Добавить кабинет</string>
    <string name="cabinet_height">Размеры кабинета</string>
    <string name="width">Ширина</string>
    <string name="height">высота</string>
    <string name="length">Длина</string>
    <string name="name_cabinet">Название кабинета</string>
    <string name="enter_name_cabinet">Введите название кабинета</string>
    <string name="equipment">Оборудование</string>
    <string name="cabinet_type">Тип кабинета</string>
    <string name="name_equipment_list">Список оборудования</string>
    <string name="enter_name_equipment">Введите название оборудования</string>
    <string name="equipment_type_text">Тип: %1$s</string>
    <string name="equipment_group_text">Ростовая группа: %1$s</string>
    <string name="equipment_number_text">Номер: %1$s</string>
    <string name="equipment_state_text">Состояние: %1$s</string>
    <string name="equipment_cabinet_text">Закреплен за кабинетом: %1$s</string>
    <string name="equipment_date_text">Дата последней проверки: %1$s</string>
    <string name="add_equipment_name">Добавление оборудования</string>
    <string name="name_equipment_input">Наименование оборудования</string>
    <string name="name_input_placeholder">Введите наименование оборудования</string>
    <string name="type_equipment">Тип оборудования</string>
    <string name="group_name">Ростовая группа</string>
    <string name="state_equipment">Состояние оборудования</string>
    <string name="alert_message_equipment_register">Получить QR код для данного оборудования можно будет получить в разделе “редактирование оборудования” (иконка карандашика). QR код формируется из номера оборудования. В случае смены номера оборудования QR код требуется также заменить.</string>
    <string name="identification_equipment">Номер оборудования</string>
    <string name="enter_identification_equipment">Введите номер оборудования</string>
    <string name="add_equipment">Добавить оборудование</string>
    <string name="edit_data_equipment_name">Изменение данных о оборудовании</string>
    <string name="alert_equipment_edit">QR код формируется из номера оборудования. В случае смены номера оборудования QR код требуется также заменить.</string>
    <string name="delete_equipment_btn">Удалить оборудование</string>
    <string name="get_qr_code">Получить QR код</string>
    <string name="unpin_equipment">Открепить от кабинета</string>
    <string name="alert_delete_equipment">Вы уверены, что хотите удалить оборудование?</string>
    <string name="enter_identification">Введите номер оборудования</string>
    <string name="equipment_width_text">Ширина: %1$dм</string>
    <string name="equipment_height_text">Высота: %1$dм</string>
    <string name="equipment_length_text">Длинна: %1$dм</string>
    <string name="equipment_area_text">Площадь: %1$dм^2</string>
    <string name="edit_data_cabinet_name">Изменение данных о кабинете</string>
    <string name="delete_cabinet">Удалить кабинет</string>
    <string name="alert_delete_cabinet">Вы уверены, что хотите удалить кабинет?</string>
    <string name="assigning_equipment_name">Закрепление оборудования</string>
    <string name="select_equipment">Выберите оборудование</string>
    <string name="unpin_equipment_on_cabinet">Открепление оборудования</string>
    <string name="unpin_equipment_to_cabinet_button">Открепить оборудование</string>
    <string name="scanner_qr_name">Сканер QR кодов</string>
    <string name="open_card_cabinet">Открыть карточку кабинета</string>
    <string name="start_invent">Начать инвентаризацию</string>
    <string name="edot_data">Редактирование данных</string>
    <string name="alert_message_add_cabinet">Получить QR код для данного кабинета можно будет получить в карточке кабинета (нажать на название кабинета в меню). QR код формируется из названия кабинета. В случае смены названия кабинета QR код требуется также заменить.</string>
    <string name="alert_edit_cabinet">QR код формируется из названия кабинета. В случае смены названия кабинета QR код требуется также заменить.</string>
    <string name="border_camera">рамка камеры</string>
    <string name="all_equipment_find">Все оборудование проверенно!</string>
    <string name="end_invent">закончить инвентаризацию</string>
    <string name="cabinet_name_activity_invent">Инвентаризация %1$s</string>
    <string name="alert_password">Если вы не меняете пароль оставьте поле пустым!</string>
    <string name="user_role">Роль пользователя</string>
</resources>