<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:background="@drawable/header_rounded"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_clear_48px"
            android:contentDescription="@string/close_activity"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/edit_data_cabinet_name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <LinearLayout
                    android:layout_width="339dp"
                    android:layout_height="78dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/name_cabinet"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/nameCabinetInput"
                        android:layout_width="339dp"
                        android:layout_height="48dp"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/rounded_square_border"
                        android:elevation="3dp"
                        android:hint="@string/enter_name_cabinet"
                        android:inputType="textEmailAddress"
                        android:outlineProvider="background"
                        android:paddingLeft="16sp"
                        android:paddingRight="16sp"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cabinet_type"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                    <FrameLayout
                        android:layout_width="339dp"
                        android:layout_height="48dp"
                        android:background="@drawable/rounded_square_border">

                        <Spinner
                            android:id="@+id/typeCabinet"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent" />

                        <ImageView
                            android:id="@+id/cabinet_arrow"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="12dp"
                            android:contentDescription="@string/arrow"
                            android:src="@drawable/ic_keyboard_arrow_down_48px" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/frameLayout3"
                    android:layout_width="339dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="21dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="17dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/cabinet_height"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/widthInput"
                            android:layout_width="110dp"
                            android:layout_height="48dp"
                            android:autofillHints="none"
                            android:background="@drawable/rounded_square_border"
                            android:elevation="3dp"
                            android:hint="@string/width"
                            android:inputType="numberSigned"
                            android:outlineProvider="background"
                            android:paddingLeft="16sp"
                            android:paddingRight="16sp"
                            android:textSize="14sp" />

                        <Space
                            android:layout_width="4dp"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:id="@+id/lengthInput"
                            android:layout_width="110dp"
                            android:layout_height="48dp"
                            android:autofillHints="none"
                            android:background="@drawable/rounded_square_border"
                            android:elevation="3dp"
                            android:hint="@string/length"
                            android:inputType="numberSigned"
                            android:outlineProvider="background"
                            android:paddingLeft="16sp"
                            android:paddingRight="16sp"
                            android:textSize="14sp" />
                        <Space
                            android:layout_width="4dp"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:id="@+id/heightInput"
                            android:layout_width="110dp"
                            android:layout_height="48dp"
                            android:autofillHints="none"
                            android:background="@drawable/rounded_square_border"
                            android:elevation="3dp"
                            android:hint="@string/height"
                            android:inputType="numberSigned"
                            android:outlineProvider="background"
                            android:paddingLeft="16sp"
                            android:paddingRight="16sp"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="18dp"
                android:background="@drawable/rounded_square_border"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_error_outline_48px"
                    android:contentDescription="@string/alert"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_edit_cabinet"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:justificationMode="inter_word"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/deleteCabinetButton"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_btn_delete_user"
                android:layout_gravity="center"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/delete_cabinet"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/savedChangesButton"
                android:layout_width="339dp"
                android:layout_height="57dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:elevation="3dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/saved_changes"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </FrameLayout>

        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>