<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:background="@drawable/header_rounded"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/returnButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_keyboard_return"
            android:clickable="true"
            android:contentDescription="@string/return_btn"
            android:focusable="true" />

        <TextView
            android:id="@+id/nameActivityDocumentation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/scanner_qr_name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <com.journeyapps.barcodescanner.BarcodeView
        android:id="@+id/barcodeView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:background="@drawable/camera_border"
        android:contentDescription="@string/border_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/barcodeView"
        app:layout_constraintTop_toBottomOf="@+id/header" />


</androidx.constraintlayout.widget.ConstraintLayout>